# Symbolic-and-Structural-Specialisation-in-Graphormers

./: README.md  generate_figures.ipynb  generate_molhiv_figures.ipynb  pyproject.toml  requirements.lock.txt  requirements.txt
colab/: graphormer_transport_specialisation_comparison.py  official_graphormer_ogbg_molhiv_colab.ipynb  official_graphormer_ogbg_molhiv_colab.py
graph_interp/: __init__.py  chemistry.py  config.py  data.py  extraction.py
graph_interp/metrics/: __init__.py  bias_profiles.py  bias_routing.py  cls.py  distance.py  entropy.py  kl.py  logit_spread.py  representation.py  scores.py  variants.py  welford.py
graph_interp/plots/: __init__.py  section_a.py  section_b.py  section_c.py  section_d.py  section_e.py  section_f.py  section_g.py  section_h.py  section_i.py  section_j.py  section_k.py  section_l.py  section_m.py
tmp_experiments/: bias_routing_extended_experiments.ipynb  per_query_scores_experiment.ipynb
