[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-interp"
version = "0.1.0"
description = "Graph Transformer Attention Interpretability toolkit"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "ogb>=1.3.6",
]

[tool.setuptools.packages.find]
include = ["graph_interp*"]
